--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 server.port=8081
 server.servlet.context-path=/
 spring.application.name=Control de Practicas
+server.error.include-message=always
+server.error.include-stacktrace=always
+server.error.include-exception=true
 
 # Configuración MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/control_practicas?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Europe/Madrid&allowPublicKeyRetrieval=true
@@ -36,6 +39,10 @@ logging.level.com.controlpracticas=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.web=DEBUG
+logging.level.org.thymeleaf=DEBUG
+
+
 
 # Configuración de archivos subidos
 spring.servlet.multipart.max-file-size=10MB
