--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ server.error.include-stacktrace=always
 server.error.include-exception=true 
 
 # Configuración MySQL
-spring.datasource.url=jdbc:mysql://localhost:3307/control_practicas?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Europe/Madrid&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/control_practicas?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Europe/Madrid&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=01041969.Alw
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración JPA/Hibernate
