--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,10 @@
 	    	<artifactId>spring-boot-starter-tomcat</artifactId>
     		<scope>provided</scope>
 		</dependency>
-		
+		<dependency>
+    	<groupId>com.fasterxml.jackson.datatype</groupId>
+    			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 		<dependency>
     		<groupId>javax.servlet</groupId>
     		<artifactId>jstl</artifactId>
