--- a/pom.xml
+++ b/pom.xml
@@ -81,20 +81,14 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         
-        <!-- MySQL Driver -->
+       
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
         
-        <!-- Lombok (opcional pero recomendado) 
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        -->
-        <!-- Bootstrap WebJars -->
+      
+       
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
@@ -106,7 +100,7 @@
             <artifactId>webjars-locator-core</artifactId>
         </dependency>
         
-        <!-- DevTools -->
+   
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -114,7 +108,7 @@
             <optional>true</optional>
         </dependency>
         
-        <!-- Testing -->
+      
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -128,11 +122,14 @@
         </dependency>
     </dependencies>
     
-   <build>
+ <build>
     <resources>
         <resource>
             <directory>src/main/resources</directory>
-            <filtering>false</filtering> <!-- filtrado desactivado -->
+            <filtering>false</filtering>
+            <includes>
+                <include>**/*</include>
+            </includes>
         </resource>
     </resources>
 
@@ -140,13 +137,15 @@
         <plugin>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+        
+        <!-- Plugin para asegurar que los recursos se copien correctamente -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>3.3.1</version>
             <configuration>
-                <excludes>
-                    <exclude>
-                    <!--    <groupId>org.projectlombok</groupId>
-                        <artifactId>lombok</artifactId> -->
-                    </exclude>
-                </excludes>
+                <encoding>UTF-8</encoding>
             </configuration>
         </plugin>
     </plugins>
